<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Medical Info App</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_alarms">Alarms</string>
    <string name="title_activity_display_storage">DisplayStorageActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="edit_message">Enter a message</string>
    <string name="action_search">Search</string>
    <string name="action_advanced_search">Advanced Search</string>
    <string name="action_web_search">Web Search</string>
    <string name="button_search">Search</string>

    <!-- Strings related to storage -->
    <string name="button_store">Storage</string>
    <string name="button_create">Create</string>
    <string name="tv_label">Add a diet, article, or recipe : </string>
    <string name="edit_name">Enter Name</string>
    <string name="edit_url">Enter URL</string>
    <string name="radio_diet">Diet</string>
    <string name="radio_article">Article</string>
    <string name="radio_recipe">Recipe</string>

    <!-- Strings related to main menu -->
    <string name="Storage">Storage</string>
    <string name="Contacts">Contacts</string>
    <string name="Diet">Diet</string>
    <string name="Medication">Medication</string>
    <string name="User">User</string>
    <string name="Vitals">Vitals</string>
    <string name="view_contacts_information">view_contacts_information</string>
    <!-- Strings related to all login and diet stuff -->

    <string name="title_activity_login">Med App</string>

    <!-- Strings related to Login -->
    <string name="username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="button_send">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="Register_new_user">Fill in all boxes</string>
    <string name="prompt_password_check">Password</string>

    <!-- Strings related to Register and Update User Information -->
    <string name="save_user_register_data">Complete</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="update_user_information">Update User Information</string>
    <string name="save_user_input_data">Save</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Email_Address">Email</string>
    <string name="Height_Feet">Height in Feet</string>
    <string name="Height_Inches">Height in Inches</string>
    <string name="Weight1">Weight</string>
    <string name="Age">Age</string>
    <string name="Gender">Gender</string>
    <string name="Street_Name">Street Name</string>
    <string name="City">"City"</string>
    <string name="State">State</string>
    <string name="Zipcode">Zipcode</string>
    <string name="Doctor_Name">"Doctor Name"</string>
    <string name="Doctor_Email">"Doctor Email"</string>
    <string name="Doctor_Phone">"Doctor Phone"</string>
    <string name="Guest_Password">"Guest Password"</string>

    <!-- Strings related to MainPage -->
    <string name="Main_Page">Main Page</string>
    <string name="view_user_information">View User Information</string>
    <string name="title_activity_user_information">UserInformation</string>
    <string name="sign_out">Sign Out</string>

    <!-- Strings related to UserInformation -->
    <string name="User_Information">User Information</string>
    <string name="button_update_user_information">Update User Information</string>
    <string name="title_activity_update_user_information">UpdateUserInformation</string>
    <string name="userame_display">Username:</string>

    <!-- Strings related to UserInformation -->
    <string name="title_activity_view_diet_information">ViewDietInformation</string>
    <string name="view_diet_information">View Diet Information</string>
    <string name="main_page">Main Page</string>
    <string name="update_diet_information">Update Diet Information</string>
    <string name="title_activity_update_diet_information">UpdateDietInformation</string>

    <!-- Strings related to ViewDietInformation -->
    <string name="Username">Username</string>
    <string name="Date">Date</string>
    <string name="Weight">Weight</string>
    <string name="Calories">Calories</string>
    <string name="BMI">BMI</string>
    <string name="Workout_Plan">Workout Plan</string>
    <string name="Calories_Burned">Calories Burned</string>
    <string name="title_activity_new__medication_2">New_Medication_2</string>
    <string name="title_activity_view__vital__signs">View_Vital_Signs</string>
    <string name="title_activity_vitals__screen">Vitals_Screen</string>
    <string name="title_activity_vitals__check__screen">Vitals_Check_Screen</string>
    <string name="title_activity_bad__new__vitals">Bad_New_Vitals</string>
    <string name="title_activity_current__medication">Current_Medication</string>
    <string name="title_activity_medication__screen">Medication_Screen</string>
    <string name="title_activity_new__vitals">New_Vitals</string>
    <string name="title_activity_new__medication_3">New_Medication_3</string>
    <string name="title_activity_new__medication__checker">New_Medication_Checker</string>
    <string name="title_activity_new__medication">New_Medication</string>
    <string name="title_activity_add_new_doctor">AddNewDoctor</string>

    <!-- Strings related to AddNewDoctor and AddNewAppointment -->
    <string name="add_new_doctor">Add New Doctor</string>
    <string name="add_new_appointment">Add New Appointment</string>
    <string name="Doctor_Type">Doctor Type</string>
    <string name="title_activity_add_new_appointment">AddNewAppointment</string>
    <string name="title_activity_view_appointment">ViewAppointment</string>
    <string name="title_activity_view_doctors">ViewDoctors</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="Edit_Doctor_Information">Edit Doctor Information</string>
    <string name="Edit_Appointment_Information">Edit Appointment Information</string>
    <string name="view_appointment">View Appointments</string>
    <string name="view_doctor">View Doctors</string>
    <string name="Delete">Delete</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="Save">Save</string>
    <string name="view_doctors">View Doctors</string>
    <string name="view_appointments">View Appointments</string>

    <!-- Strings related to AddNewContact -->
    <string name="view_contacts">View Contacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="title_activity_add_new_contact">AddNewContact</string>
    <string name="Edit_Contact_Information"> Edit Contact Information </string>
    <string name="add_new_contact"> add new contact</string>
    <string name="Contact_Name">Contact Name</string>
    <string name="Contact_Email">Contact Email</string>
    <string name="Contact_Phone">Contact Phone</string>
    <string name="Contact_Type">Contact Type</string>
    <string name="title_activity_interact_contact">InteractContact</string>

    <string name="TextMessage">Text Message</string>
    <string name="PhoneCall">Phone Call</string>
    <string name="Email">Email</string>
    <string name="DeleteContact">Delete Contact</string>
    <string name="Button_set">Set Alarm</string>
    
</resources>
