<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_register" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:singleLine="true" />
    <EditText
        android:id="@+id/password_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_password_check"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:singleLine="true" />
    
    <EditText
        android:id="@+id/First_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/First_Name" >
    </EditText>
    <EditText
        android:id="@+id/Last_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Last_Name" >
    </EditText>
    <EditText
        android:id="@+id/Email_Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Email_Address" >
    </EditText>
    <EditText
        android:id="@+id/Height_Feet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/Height_Feet" >
    </EditText>
    <EditText
        android:id="@+id/Height_Inches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:ems="10"
        android:inputType="number"
        android:hint="@string/Height_Inches">
    </EditText>
    <EditText
        android:id="@+id/Weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/Weight" >
    </EditText>
    <EditText
        android:id="@+id/Age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/Age" >
    </EditText>
	<EditText
        android:id="@+id/Gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Gender" >
    </EditText>
    <EditText
        android:id="@+id/Street_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Street_Name" >
    </EditText>
    <EditText
        android:id="@+id/City"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/City" >
    </EditText>
    <EditText
        android:id="@+id/State"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/State" >
    </EditText>
    <EditText
        android:id="@+id/Zipcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/Zipcode" >
    </EditText>

    <EditText
        android:id="@+id/Doctor_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Doctor_Name" >
    </EditText>
    <EditText
        android:id="@+id/Doctor_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/Doctor_Email" >
    </EditText>
    <EditText
        android:id="@+id/Doctor_Phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/Doctor_Phone" >
    </EditText>
    <Button
        android:id="@+id/save_register_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_user_register_data"
        android:onClick="complete_user_registration" />

</LinearLayout>
</ScrollView>