<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_appointment" />

    <EditText
        android:id="@+id/Doctor_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Doctor_Name"
        android:singleLine="true" />
    <Button 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:text="@string/pick_date" 
	    android:onClick="showDatePickerDialog" />
    
    <Button 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:text="@string/pick_time" 
	    android:onClick="showTimePickerDialog" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        android:onClick="save_new_appointment" />
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Delete"
        android:onClick="delete_appointment" />


</LinearLayout>
</ScrollView>
