<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!-- Search / will display always -->

     
    <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@drawable/ic_action_search"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />
    

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action__advanced_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_advanced_search"
          android:showAsAction="never" />
    
    <item android:id="@+id/action_web_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_web_search"
          android:showAsAction="never" />
            
    <item android:id="@+id/action_settings"
       	  android:icon="@drawable/ic_drawer"
          android:title="@string/action_settings"
          android:showAsAction="never" />
    

    

</menu>