<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="16dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/action_sign_in_register"
        android:onClick="sign_in_user" />
    <Button
        android:id="@+id/register_new_user"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_send"
        android:singleLine="true"
        android:layout_gravity="left"
        android:layout_marginTop="16dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:onClick="Register_New_User"/>
</LinearLayout>
</ScrollView>