<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_contacts" />
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Edit_Contact_Information"
        android:onClick="update_Contact_info" />

	    <ListView
	        android:id="@+id/listview1"
	        android:layout_width="wrap_content"
	        android:layout_height="199dp" >

	    </ListView>

	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:paddingBottom="@dimen/activity_vertical_margin"
	        android:paddingLeft="@dimen/activity_horizontal_margin"
	        android:paddingRight="@dimen/activity_horizontal_margin"
	        android:paddingTop="@dimen/activity_vertical_margin"
	        tools:context="com.example.personalhealth.InteractContact$PlaceholderFragment" >

	        <Button
	            android:id="@+id/button4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentBottom="true"
	            android:layout_alignParentRight="true"
	            android:text="@string/DeleteContact"
	            android:onClick="DeleteContact"  />

	        <Button
	            android:id="@+id/buttontext"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentTop="true"
	            android:layout_marginTop="34dp"
	            android:text="@string/TextMessage"
	            android:onClick="TextMessage"  />

	        <Button
	            android:id="@+id/button3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/buttontext"
	            android:layout_alignParentBottom="true"
	            android:text="@string/Email"
	            android:onClick="Email" />

	        <Button
	            android:id="@+id/button2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/buttontext"
	            android:layout_alignBottom="@+id/buttontext"
	            android:layout_alignRight="@+id/button4"
	            android:text="@string/PhoneCall"
	            android:onClick="PhoneCall" />

	    </RelativeLayout>

</LinearLayout>  
