<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Main_Page" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <Button
        android:id="@+id/view_diet_information_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="view_diet_info"
        android:text="@string/view_diet_information" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="view_user_data"
        android:text="@string/view_user_information" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:columnCount="5"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="left|center_vertical"
            android:background="@drawable/storage_icon"
            android:contentDescription="@string/abc_searchview_description_search"
            android:onClick="gotoStorage"
            android:src="@drawable/abc_ab_bottom_transparent_dark_holo" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="left|center_vertical"
            android:background="@drawable/contacts_icon"
            android:contentDescription="@string/abc_searchview_description_search"
            android:src="@drawable/abc_ab_bottom_transparent_dark_holo" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="left|center_vertical"
            android:layout_marginRight="30dp"
            android:background="@drawable/diet_icon"
            android:contentDescription="@string/abc_searchview_description_search"
            android:src="@drawable/abc_ab_bottom_transparent_dark_holo" />

    </LinearLayout>

       <LinearLayout 
       		android:layout_width="match_parent"
       		android:layout_height="30dp"
       		android:orientation ="horizontal">

        		 <TextView
        		     android:id="@+id/StorageText"
        		     android:layout_width="96dp"
        		     android:layout_height="wrap_content"
        		     android:text="@string/Storage" />

        		 <TextView
        		     android:id="@+id/ContactsText"
        		     android:layout_width="96dp"
        		     android:layout_height="wrap_content"
        		     android:text="@string/Contacts" />

        		 <TextView
        		     android:id="@+id/DietText"
        		     android:layout_width="96dp"
        		     android:layout_height="wrap_content"
        		     android:text="@string/Diet" />
 
       </LinearLayout >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:orientation="horizontal" >
    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:background="@drawable/pills_icon"
        android:contentDescription="@string/abc_searchview_description_search"
        android:src="@drawable/abc_ab_bottom_transparent_dark_holo" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:background="@drawable/update_icon"
        android:contentDescription="@string/abc_searchview_description_search"
        android:src="@drawable/abc_ab_bottom_transparent_dark_holo" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:background="@drawable/vitals_icon"
        android:contentDescription="@string/abc_searchview_description_search"
        android:src="@drawable/abc_ab_bottom_transparent_dark_holo" />

    </LinearLayout>

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sign_out_user"
        android:text="@string/sign_out" />

</LinearLayout>
